--- a/.gitignore
+++ b/.gitignore
@@ -431,4 +431,5 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
+/out/
 # End of https://www.gitignore.io/api/linux,macos,windows,visualstudio,visualstudiocode
